graphics provided for these cards dont even create the end content they wanted.. cards are difficult to get aligned correct

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,3 +5,4 @@ $bg-color-light: #f9f9f9;
 $dark-color: #333;
 $navbar-text: #969696;
 $primary-color: #bd9235;
+$secondary-color: #040040;
