--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,18 @@ body {
     overflow-x: hidden;
 }
 
+h1 {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 800;
+    color: $secondary-color;
+
+    // Adding Underline
+    display: inline-block;
+    padding-bottom: .5rem;
+    border-bottom: 3px $primary-color solid;  
+}
+
 a {
     text-decoration: none;
     color: $navbar-text;
@@ -126,9 +138,7 @@ ul {
 
 // Home Section A
 #home-a{
-    text-align: center;
     margin: 6rem 0;
-    // padding: 3.5rem 0;
     position: relative;
 
     // Background Marble Effect 2
@@ -173,5 +183,16 @@ ul {
             font-size: 1.25rem;
             margin-bottom: 2rem;
         }
+    }
+}
+
+// Home Section B
+#home-b {
+    position: relative;
+    margin: 6rem 0;
+    padding-top: 6rem;
+    
+    .wwdcards {
+        padding-top: 2rem;
     }
 }
